--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -89,7 +89,7 @@
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
         <div class="mt-3">
-          <a href="#">Forgot your password?</a>
+          <a href="/users/forgot-password">Forgot your password?</a>
         </div>
         <div class="mt-3">
           <p>Don't have an account? <a href="/users/register">Register</a></p>
