--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,3 +212,17 @@ h1.display-3 {
 .hidden {
     display: none;
 }
+.wish-notification {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #0d6efd;
+    color: #fff;
+    font-size: 12px;
+    padding: 3px 8px;
+    border-radius: 50%;
+}
+
+.hidden {
+    display: none;
+}
