added coupon code

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -26,7 +26,7 @@
 
 <body>
 
-    <!-- <script>
+    <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Check if JWT token exists in local storage
             const token = localStorage.getItem('token');
@@ -65,7 +65,7 @@
                 document.getElementById('profile-btn').style.display = 'none';
             }
         });
-    </script> -->
+    </script>
 
 
 
