--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,7 +202,7 @@ h1.display-3 {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #0d6efd;
+    background-color: red;
     color: #fff;
     font-size: 12px;
     padding: 3px 8px;
@@ -216,7 +216,7 @@ h1.display-3 {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #0d6efd;
+    background-color:red;
     color: #fff;
     font-size: 12px;
     padding: 3px 8px;
