--- a/public/views/aboutUs.ejs
+++ b/public/views/aboutUs.ejs
@@ -21,29 +21,33 @@
 </head>
 
 <body>
-  <div class="container mt-3" style="font-size: large;">
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-center"> <!-- Center the navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="#"><img src="/img/OstaaLogo.png" alt="Your Logo" height="30" /></a>
-      <div class="navbar-links"> <!-- Wrap your links inside a div -->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <a class="navbar-brand" href="#">
+        <img src="/img/OstaaLogo.png" alt="Logo" style="max-height: 40px;">
+      </a>
+  
+      <!-- Navbar links -->
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link " aria-current="page" href="/">Home</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link " href="/products/blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link active" href="/products/aboutUs">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact us</a>
+            <a class="nav-link" href="/products/contactUs">Contact us</a>
           </li>
         </ul>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
 
 
 
@@ -160,10 +164,10 @@
           <div class="row">
             <div class="col-md-6 col-lg-5 mt-3 mt-lg-0">
               <h6 class="h6 fw-bold">Store</h6>
-              <a href="#" class="text-decoration-none text-muted">About us</a><br>
+              <a href="/products/aboutUs" class="text-decoration-none text-muted">About us</a><br>
               <a href="#" class="text-decoration-none text-muted">Find stories</a><br>
               <a href="#" class="text-decoration-none text-muted">Categories</a><br>
-              <a href="#" class="text-decoration-none text-muted">Blogs</a><br>
+              <a href="/products/blog" class="text-decoration-none text-muted">Blogs</a><br>
             </div>
 
             <div class="col-md-6 col-lg-7 mt-3 mt-md-0">
