--- a/public/views/blog.ejs
+++ b/public/views/blog.ejs
@@ -35,17 +35,17 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link " aria-current="page" href="/">Home</a>
               </li>
               
               <li class="nav-item">
                 <a class="nav-link active" href="#">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="/products/aboutUs">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+                <a class="nav-link" href="/products/contactUs/">Contact us</a>
               </li>
             </ul>
           </div>
@@ -116,10 +116,10 @@
           <div class="row">
             <div class="col-md-6 col-lg-5 mt-3 mt-lg-0">
               <h6 class="h6 fw-bold">Store</h6>
-              <a href="#" class="text-decoration-none text-muted">About us</a><br>
+              <a href="/products/aboutUs" class="text-decoration-none text-muted">About us</a><br>
               <a href="#" class="text-decoration-none text-muted">Find stories</a><br>
               <a href="#" class="text-decoration-none text-muted">Categories</a><br>
-              <a href="#" class="text-decoration-none text-muted">Blogs</a><br>
+              <a href="/products/blog" class="text-decoration-none text-muted">Blogs</a><br>
             </div>
             <div class="col-md-6 col-lg-7 mt-3 mt-md-0">
               <h6 class="h6 fw-bold">Newsletter</h6>
