--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -39,17 +39,17 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link " aria-current="page" href="/">Home</a>
           </li>
          
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="/products/blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="/products/aboutUs">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact us</a>
+            <a class="nav-link" href="/products/contactUs">Contact us</a>
           </li>
         </ul>
       </div>
