--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -143,7 +143,7 @@
                 Embrace Sustainability, Rediscover Value: Your Sanctuary for Secondhand Treasures</h1>
             <!-- <p class="lead">Trendy Products, Factory Prices, Excellent Service</p> -->
             <a id="shop-btn" href="#" role="button" class="btn btn-warning fs-5 text-light mt-md-5">Shop now</a>
-            <a href="#" role="button" class="btn btn-light text-dark fs-5 mt-md-5">Learn more</a>
+            <a href="/products/aboutUs" role="button" class="btn btn-light text-dark fs-5 mt-md-5">Learn more</a>
         </div>
     </div>
 
